--- a/style.css
+++ b/style.css
@@ -1,11 +1,27 @@
 header{
-    height: 200px;
-    background-color: blueviolet;
+    height:150px;
+   
 }
+    nav{
+    width:100%;
+    height:50%;
+    }
+    #imgheader{
+     width:100%;
+     height:100%;
+    }
+
 main{
     height: 200px;
     background-color: aqua;
 }
+
+.imagem-main{
+    width:30%;
+    height:30%;
+
+}
+
 main section{
     height:50px;
     background-color: aquamarine;
